Created div class container

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+
+        <div class="container"></div>
+
+
     </body>
 </html>
