--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <body>
 
         <div class="container"></div>
-
-
+        <p>Enter your text or URL</p>
+        <input type="text" placeholder="Text or URL">
+        <button>Generate QR Code</button>
     </body>
 </html>
