Updated the container class

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
 
-        <div class="container"></div>
-        <p>Enter your text or URL</p>
-        <input type="text" placeholder="Text or URL">
-        <button>Generate QR Code</button>
+        <div class="container">
+            <p>Enter your text or URL</p>
+            <input type="text" placeholder="Text or URL">
+            <button>Generate QR Code</button>
+        </div>
+       
     </body>
 </html>
