Added a script tag to index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
         <div class="container">
             <p>Enter your text or URL</p>
             <input type="text" placeholder="Text or URL">
+
+            <div class="imgBox">
+                <img src="" id="qrImage">
+            </div>
+
             <button>Generate QR Code</button>
         </div>
-       
+
+        <script>
+
+            let imgBox = document.getElementById("imgBox");
+            let qrImage = document.getElementBy("imgBox");
+
+            function generateQR(){
+
+            }
+
+        </script>
+
     </body>
 </html>
