Added function to the button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="" id="qrImage">
             </div>
 
-            <button>Generate QR Code</button>
+            <button onclick="generateQR()">Generate QR Code</button>
         </div>
 
         <script>
