Fixed a typo on line 24

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <script>
 
             let imgBox = document.getElementById("imgBox");
-            let qrImage = document.getElementBy("qrImage");
+            let qrImage = document.getElementById("qrImage");
             let qrText = document.getElementById("qrText");
 
             function generateQR(){
-                qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=Example" + qrText.value;
+                qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=Example " + qrText.value;
             }
 
         </script>
