--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
             function generateQR(){
                 qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=Example " + qrText.value;
+                imgBox.classlist.add("show-img");
             }
 
         </script>
