--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
             let qrText = document.getElementById("qrText");
 
             function generateQR(){
+                if(qrText.value.length > 0){
                 qrImage.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=Example " + qrText.value;
-                imgBox.classlist.add("show-img");
+                imgBox.classList.add("show-img");
+                }else{
+                    qrText.classList.add('error');
+                    setTimeout(()=>{
+                        qrText.classList.remove('error');
+                    }, 1000);
+                }
             }
 
         </script>
